[project]
name = "fcdmft"
version = "0.1.0"
description = "Ab initio full cell dynamical mean-field theory (DMFT) and GW+DMFT for solids based on PySCF"
readme = "README.md"
requires-python = ">=3.11"
license = LICENSE
authors = [
    {name = "Tianyu Zhu", email = "tianyu.zhu@yale.edu"},
    {name = "Huanchen Zhai"},
    {name = "Zhihao Cui"},
    {name = "Linqing Peng"},
    {name = "Garnet Chan"}
]
keywords = ["quantum-chemistry", "dmft", "gw", "many-body-physics", "pyscf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "numpy>=1.16",
    "scipy>=1.2",
    "h5py>=2.9",
    "pyscf>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fcdmft"]
